K8s/Kustomize/base/sockshop/shipping/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
  labels:
    name: shipping
spec:
  replicas: 3
  selector:
    matchLabels:
      name: shipping
  template:
    metadata:
      labels:
        name: shipping
    spec:
      containers:
        - name: shipping
          image: weaveworksdemos/shipping:0.4.8

          # env:
          #   - name: ZIPKIN
          #     value: zipkin.jaeger.svc.cluster.local
          #   - name: JAVA_OPTS
          #     value: -Xms64m -Xmx128m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false

          resources:
            limits:
              cpu: 300m
              memory: 800Mi
            requests:
              cpu: 100m # 100 millicores (0.1 CPU)
              memory: 300Mi
          ports:
            - containerPort: 80
          securityContext:
            capabilities:
              drop:
                - all
              add:
                - NET_BIND_SERVICE
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
