K8s/Kustomize/base/sockshop/shipping/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping
  # annotations:
  #   prometheus.io/scrape: 'true'
  labels:
    name: shipping
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    name: shipping
