K8s/Kustomize/base/sockshop/shipping/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shipping-access
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: shipping
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: orders
      ports:
        - protocol: TCP
          port: 80
